https://test.kuali.org/jira/browse/KRAFUNC-221
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6652 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-commitments.html
+++ b/kra-awa-dev/aw-commitments.html
@@ -877,8 +877,7 @@
                     
                     <table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
                         <tr>
-                            <td height="68" style="border:none;">
-                                <textarea name="z" style="width:100%; text-align:left;" rows="4"></textarea>
+                            <td height="68" style="border:none;"> <textarea name="z" style="width:99%; text-align:left;" rows="4"></textarea>
                             </td>
                             <td style="border:none; width:20px; vertical-align:bottom;">
                                 <input name="x" src="../images/pencil_add.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Expanded Text Area" type="image" />
