--- a/kra-awa-dev/aw-time-money-compactAwardHierarchy.html
+++ b/kra-awa-dev/aw-time-money-compactAwardHierarchy.html
@@ -2764,8 +2764,7 @@
                             	
                                 <table style="border:none; width:100%; background:none;" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <td style="border:none; background:none;">
-                                            <textarea name="z" style="width:100%; text-align:left;" rows="1"></textarea>
+                                        <td style="border:none; background:none;"> <textarea name="z" style="width:99%; text-align:left;" rows="1"></textarea>
                                         </td>
                                         <td style="border:none; width:20px; vertical-align:bottom; background:none;">
                                             <input name="x" src="../images/pencil_add.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Expanded Text Area" type="image" />
