--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -431,8 +431,7 @@
                         	
                             <table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
                                 <tr>
-                                    <td style="border:none;">
-                                        <textarea name="z" style="width:100%; text-align:left;" rows="2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rhoncus interdum dolor, ut convallis eros dignissim vel. Integer fringilla felis sit amet quam posuere viverra. Curabitur fermentum condimentum ante, auctor tempus leo interdum eget. Nullam imperdiet mauris vel metus faucibus porttitor.</textarea>
+                                    <td style="border:none;"> <textarea name="z" style="width:99%; text-align:left;" rows="2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rhoncus interdum dolor, ut convallis eros dignissim vel. Integer fringilla felis sit amet quam posuere viverra. Curabitur fermentum condimentum ante, auctor tempus leo interdum eget. Nullam imperdiet mauris vel metus faucibus porttitor.</textarea>
                                     </td>
                                     <td style="border:none; width:20px; vertical-align:bottom;">
                                         <input name="x" src="../images/pencil_add.png" onclick="javascript: alert('This would open a larger editable text area for this field.'); return false" class="tinybutton" alt="Expanded Text Area" type="image" />
