--- a/kra-awa-dev/aw-notes.html
+++ b/kra-awa-dev/aw-notes.html
@@ -306,8 +306,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 
                     <table style="border:none; width:100%; background:none;" cellpadding="0" cellspacing="0">
                         <tr>
-                            <td style="border:none; background:none;">
-                                <textarea name="z" style="width:100%; text-align:left;" rows="3"></textarea>
+                            <td style="border:none; background:none;"> <textarea name="z" style="width:99%; text-align:left;" rows="3"></textarea>
                             </td>
                             <td style="border:none; width:20px; vertical-align:bottom; background:none;">
                                 <input name="x" src="../images/pencil_add.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Expanded Text Area" type="image" />
