--- a/kra-awa-dev/aw-time-money-singlenode.html
+++ b/kra-awa-dev/aw-time-money-singlenode.html
@@ -390,8 +390,7 @@
                         	
                             <table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
                                 <tr>
-                                    <td style="border:none;">
-                                        <textarea name="z" style="width:100%; text-align:left;" rows="2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rhoncus interdum dolor, ut convallis eros dignissim vel. Integer fringilla felis sit amet quam posuere viverra. Curabitur fermentum condimentum ante, auctor tempus leo interdum eget. Nullam imperdiet mauris vel metus faucibus porttitor.</textarea>
+                                    <td style="border:none;"> <textarea name="z" style="width:99%; text-align:left;" rows="2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin rhoncus interdum dolor, ut convallis eros dignissim vel. Integer fringilla felis sit amet quam posuere viverra. Curabitur fermentum condimentum ante, auctor tempus leo interdum eget. Nullam imperdiet mauris vel metus faucibus porttitor.</textarea>
                                     </td>
                                     <td style="border:none; width:20px; vertical-align:bottom;">
                                         <input name="x" src="../images/pencil_add.png" onclick="javascript: alert('This would open a larger editable text area for this field.'); return false" class="tinybutton" alt="Expanded Text Area" type="image" />
@@ -654,7 +653,7 @@
 <!-- GLOBAL NAV BUTTONS -->
     <div class="globalbuttons">
         <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" border="0"></a>
-        <input src="../images/buttonsmall_blanketapprove.gif" onclick="javascript: alert('Please let Bart or Tom know what this button does so we can add a description of the functionality here.'); return false" class="tinybutton" alt="blanket approve" title="Blanket Approve" type="image" />
+        <input src="../images/buttonsmall_submit.gif" onclick="javascript: alert('Please let Bart or Tom know what this button does so we can add a description of the functionality here.'); return false" class="tinybutton" alt="blanket approve" title="Blanket Approve" type="image" />
         <a href="#"><img src="../images/buttonsmall_reload.gif" alt="reload" width="75" height="18" border="0"></a>
         <a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" border="0"></a>
         <a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" border="0"></a>
