--- a/kra-awa-dev/abud-parameters.html
+++ b/kra-awa-dev/abud-parameters.html
@@ -396,11 +396,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tr >
                   <th class="infoline"><div align="center">Add:</div></th>
                   <td nowrap class="infoline"><div align="center">
-                      <input name="totalCostLimit" size="8" onchange="dataChanged()" style="text-align: right;" type="text" id="start date"/>
-                      <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
+                      <input name="totalCostLimit" size="10" onchange="dataChanged()" style="text-align: right;" type="text" id="start date"/>
+                  <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
                   <td nowrap class="infoline"><div align="center">
-                      <input name="totalCostLimit" size="8" onchange="dataChanged()" style="text-align: right;" type="text" id ="end date"/>
-                      <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
+                      <input name="totalCostLimit" size="10" onchange="dataChanged()" style="text-align: right;" type="text" id ="end date"/>
+                  <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
                   <td class="infoline">
                     <div align="center">
                       <input name="direct cost" size="8" onchange="dataChanged()" style="text-align: right;" type="text" id ="direct cost2"/>
@@ -425,11 +425,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tr >
                   <th><div align="center">&nbsp;1 </div></th>
                   <td><div align="center">
-                      <input name="totalCostLimit" size="8" value="06/05/2008" onchange="dataChanged()" style="text-align: right;" type="text" id="start date"/>
-                      <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
+                      <input name="totalCostLimit" size="10" value="06/05/2008" onchange="dataChanged()" style="text-align: right;" type="text" id="start date"/>
+                  <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
                   <td nowrap><div align="center">
-                      <input name="totalCostLimit" size="8" value="06/04/2009" onchange="dataChanged()" style="text-align: right;" type="text" id="end date"/>
-                      <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
+                      <input name="totalCostLimit" size="10" value="06/04/2009" onchange="dataChanged()" style="text-align: right;" type="text" id="end date"/>
+                  <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
                   <td>                    <div align="center">
                     <input name="direct cost2" size="8" value="0.00" onchange="dataChanged()" style="text-align: right;" type="text" id ="direct cost3"/>
                   </div></td>
@@ -453,11 +453,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tr>
                   <th><div align="center">&nbsp;2 </div></th>
                   <td><div align="center">
-                      <input name="totalCostLimit" size="8" value="06/05/2009 " onchange="dataChanged()" style="text-align: right;" type="text" id ="start date"/>
-                      <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
+                      <input name="totalCostLimit" size="10" value="06/05/2009 " onchange="dataChanged()" style="text-align: right;" type="text" id ="start date"/>
+                  <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
                   <td><div align="center">
-                      <input name="totalCostLimit" size="8" value="06/19/2009" onchange="dataChanged()" style="text-align: right;" type="text" id ="end date"/>
-                      <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
+                      <input name="totalCostLimit" size="10" value="06/19/2009" onchange="dataChanged()" style="text-align: right;" type="text" id ="end date"/>
+                  <img src="../images/cal.gif" alt="calendar" width="16" height="16"></div></td>
                   <td>                    <div align="center">
                     <input name="direct cost3" size="8" value="0.00" onchange="dataChanged()" style="text-align: right;" type="text" id ="direct cost4"/>
                   </div></td>
@@ -518,7 +518,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </div>
         <div align="right"><br>
           * required </div>
-        <div class="globalbuttons"> <a href="#"> </a> <img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><img src="../images/buttonsmall_defaultperiods.gif" alt="save" width="113" height="18" hspace="5" border="0"><a href="#"><img src="../images/buttonsmall_generatePeriods.gif" alt="generate all periods" width="138" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_calculatePeriods.gif" alt="calculate all periods" width="138" height="18" hspace="5" border="0"></a><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
+        <div class="globalbuttons"> <a href="#"> </a> <img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
       </div></td>
     <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
   </tr>
