https://test.kuali.org/jira/browse/KRAFUNC-124
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6657 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -4729,7 +4729,7 @@
                     <table align="center" cellpAdding="0" cellspacing="0"  summary=""  >
                         <tr>
                             <th>&nbsp;</th>
-                            <th>*Transaction</th>
+                            <th>Transaction</th>
                             <th>Comment</th>
                             <th>*Source</th>
                             <th>*Destination</th>
@@ -5313,7 +5313,7 @@
             </tr>
         </table>
 	<!-- Panel Content Div -->
-		<div class="tab-container" align="center" id="G03" style="display: nonee;">
+		<div class="tab-container" align="center" id="G03" style="display: none;">
         <!-- Panel Element: Action Summary -->
         	<!-- Element Header: Action Summary -->
                 <div class="h2-container">
