https://test.kuali.org/jira/browse/KRAFUNC-228
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6659 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-budget.html
+++ b/kra-awa-dev/abud-budget.html
@@ -87,7 +87,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   </div>
   <div class="right">
     <div class="excol">
-      <input name="imageField" type="image" class="tinybutton" onClick="MM_goToURL('parent','prop-proposal.html');return document.MM_returnValue" src="../images/tinybutton1-retprop.gif">
+      <input name="imageField" type="image" class="tinybutton" onClick="MM_goToURL('parent','aw-awards.html');return document.MM_returnValue" src="../images/tinybutton1-returntoaward.gif">
       <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-siteindex.gif">
       <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-expandall.gif" alt="expand all">
       <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-collapseall.gif" alt="collapse all">
