--- a/kra-awa-dev/aw-budgetversions.html
+++ b/kra-awa-dev/aw-budgetversions.html
@@ -459,8 +459,7 @@
                         <option>rejected</option>
                       </select>
                     </div></td>
-                  <td class="tab-subhead1" style="text-align:center; white-space:nowrap;"><input src="../images/tinybutton-open.gif" onclick="javascript: alert('Please let Bart or Tom know what this button does so we can add a description of the functionality here.'); return false" class="tinybutton" alt="open" title="Open" type="image" />
-                    <input src="../images/tinybutton-rebudget.gif" onclick="javascript: alert('this would open the budget for changes between budget categories, but the totals would not change'); return false" class="tinybutton" alt="rebudget" title="Rebudget" type="image" /></td>
+                  <td class="tab-subhead1" style="text-align:center; white-space:nowrap;"><a href="abud-parameters.html"><img src="../images/tinybutton-open.gif" style="border:none;" alt="open award budget" title="Open Award Budget" /></a>                    <input src="../images/tinybutton-rebudget.gif" onclick="javascript: alert('this would open the budget for changes between budget categories, but the totals would not change'); return false" class="tinybutton" alt="rebudget" title="Rebudget" type="image" /></td>
                 </tr>
                 <tbody id="G8" style="display: none;">
                   <tr>
@@ -500,8 +499,7 @@
                   <td class="tab-subhead1"><div align="right"> 20,000.00 </div></td>
                   <td class="tab-subhead1"><div align="center">new</div></td>
                   <td class="tab-subhead1"><div align="center"> posted</div></td>
-                  <td class="tab-subhead1" style="text-align:center; white-space:nowrap;"><input src="../images/tinybutton-open.gif" onclick="javascript: alert('Please let Bart or Tom know what this button does so we can add a description of the functionality here.'); return false" class="tinybutton" alt="open" title="Open" type="image" />
-                    <span class="tab-subhead1" style="text-align:center; white-space:nowrap;">
+                  <td class="tab-subhead1" style="text-align:center; white-space:nowrap;"><a href="abud-parameters.html"><img src="../images/tinybutton-open.gif" style="border:none;" alt="open award budget" title="Open Award Budget" /></a><span class="tab-subhead1" style="text-align:center; white-space:nowrap;">
                     <input src="../images/tinybutton-rebudget.gif" onclick="javascript: alert('this would open the budget for changes between budget categories, but the totals would not change'); return false" class="tinybutton" alt="rebudget" title="Rebudget" type="image" />
                   </span></td>
                 </tr>
