--- a/kra-awa-dev/aw-commitments.html
+++ b/kra-awa-dev/aw-commitments.html
@@ -341,7 +341,7 @@
 	<!-- Panel Tab Header -->
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle">Cost Share</td>
+                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft.gif" alt="" width="12" height="29" align="absmiddle">Cost Sharing</td>
                 <td class="tabtable1-mid"><span class="tabtable2-mid"><a href="#" id="A225" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F225" ></a></span> </td>
                 <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -380,7 +380,8 @@
         <!-- Panel Element: Cost Share -->
             <!-- Element Header: Cost Share -->
                 <div class="h2-container">
-                    <span class="subhead-left"><h2>Cost Share</h2></span>
+                    <span class="subhead-left">
+              <h2>Cost Sharing</h2></span>
                     <span class="subhead-right">
                         
                         	<!--<a href="#"><img src="../images/tinybutton-validbenefitsrates.gif" width="100" height="15" border="0" alt="valid benefits rates" align="absmiddle" /></a>-->
@@ -468,7 +469,7 @@
                         <th>1</th>
                         <td>
                             <div align="center">
-                            <input name="textfield" type="text" id="textfield" value="50.00" style="width:35px; text-align:right;">
+                            <input name="textfield" type="text" id="textfield" value="62" style="width:35px; text-align:right;">
                             </div>
                         </td>
                         <td>
@@ -483,12 +484,12 @@
                         </td>
                         <td>
                             <div align="center">
-                            <input name="textfield" type="text" id="textfield" value="2008" size="12">
+                            <input name="textfield" type="text" id="textfield" value="2009" size="12">
                             </div>
                         </td>
                         <td>
                             <div align="center">
-                            <input name="textfield" type="text" id="textfield" value="275534" size="12">
+                            <input name="textfield" type="text" id="textfield" value="123456" size="12">
                             </div>
                         </td>
                         <td>
@@ -497,7 +498,7 @@
                             </div>
                         </td>
                         <td>
-                        	<div align="right"><input name="textfield" type="text" size="12" value="1.50" style="text-align:right;" /></div>
+                        	<div align="right"><input name="textfield" type="text" size="12" value="1300.00" style="text-align:right;" /></div>
                         </td>
                         <td>
                             <div align="right"><input name="textfield" type="text" size="12" value="4.70" style="text-align:right;" /></div>
@@ -523,10 +524,46 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>2</th>
+                      <th>2</th>
+                      <td><div align="center">
+                        <input name="textfield" type="text" id="textfield" value="31" style="width:35px; text-align:right;">
+                      </div></td>
+                      <td><div align="center">
+                        <select name="select" id="select">
+                          <option>select</option>
+                          <option>Mandatory</option>
+                          <option selected>Voluntary</option>
+                          <option>Third Party/In Kind </option>
+                        </select>
+                      </div></td>
+                      <td><div align="center">
+                        <input name="textfield" type="text" id="textfield" value="2009" size="12">
+                      </div></td>
+                      <td><div align="center">
+                        <input name="textfield" type="text" id="textfield" value="446789" size="12">
+                      </div></td>
+                      <td><div align="center">
+                        <input name="textfield" type="text" id="textfield" value="435752" size="12">
+                      </div></td>
+                      <td><div align="right">
+                        <input name="textfield" type="text" size="12" value="650.00" style="text-align:right;" />
+                      </div></td>
+                      <td><div align="right">
+                        <input name="textfield" type="text" size="12" value="6.30" style="text-align:right;" />
+                      </div></td>
+                      <td><table style="border:none; background:none;" cellpadding="0" cellspacing="0">
+                        <tr>
+                          <td style="border:none; background:none; text-align:right;"><input type="text" value="12/14/2009" style="width:80px;" /></td>
+                          <td style="border:none; width:20px; vertical-align:top; background:none;"><input src="../images/cal.gif" onclick="javascript: alert('This would open the date selection dialog.'); return false" class="tinybutton" alt="date selector" title="Date Selector" type="image" /></td>
+                        </tr>
+                      </table></td>
+                      <td nowrap><div align="center"><a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                    </tr>
+                    <tr>
+                        <th>3</th>
                         <td>
                             <div align="center">
-                            <input name="textfield" type="text" id="textfield" value="50.00" style="width:35px; text-align:right;">
+                            <input name="textfield" type="text" id="textfield" value="7" style="width:35px; text-align:right;">
                             </div>
                         </td>
                         <td>
@@ -534,19 +571,19 @@
                             <select name="select" id="select">
                             <option>select</option>
                             <option>Mandatory</option>
-                            <option selected>Voluntary</option>
-                            <option>Third Party/In Kind </option>
+                            <option>Voluntary</option>
+                            <option selected>Third Party/In Kind </option>
                             </select>
                             </div>
                         </td>
                         <td>
                             <div align="center">
-                            <input name="textfield" type="text" id="textfield" value="2008" size="12">
+                              <input name="textfield" type="text" id="textfield" value="2009" size="12">
                             </div>
                         </td>
                         <td>
                             <div align="center">
-                            <input name="textfield" type="text" id="textfield" value="673457" size="12">
+                            <input name="textfield" type="text" id="textfield" value="987654" size="12">
                             </div>
                         </td>
                         <td>
@@ -555,7 +592,7 @@
                             </div>
                         </td>
                         <td>
-                        	<div align="right"><input name="textfield" type="text" size="12" value="3.25" style="text-align:right;" /></div>
+                        	<div align="right"><input name="textfield" type="text" size="12" value="150.00" style="text-align:right;" /></div>
                         </td>
                         <td>
                             <div align="right"><input name="textfield" type="text" size="12" value="6.30" style="text-align:right;" /></div>
@@ -580,13 +617,13 @@
                     </tr>
                     <tr>
                         <td class="infoline" colspan="6" style="text-align:right;"><b>Total:</b></td>
-                        <td class="infoline"><div align="right"><strong>$11.00</strong></div></td>
+                        <td class="infoline"><div align="right"><strong>$2100.00</strong></div></td>
                         <td class="infoline"><div align="right"><strong>$4.75</strong></div></td>
                         <td class="infoline" colspan="2" style="text-align:center;"><a href="#"><img src="../images/tinybutton-recalculate.gif" alt="recalculate" width="72" height="15" border="0"></a></td>
                     </tr>
                 </table>
         <!-- Element Content: Comments -->
-                <table align="center" cellpAdding="0" cellspacing="0"  summary=""  >
+          <table align="center" cellpAdding="0" cellspacing="0"  summary=""  >
                     <tr>
                         <th scope="row" style="text-align:right; width:100px;">Comments:</th>
                         <td style="padding:0px;">
@@ -618,7 +655,7 @@
             </tr>
         </table>
 	<!-- Panel Content Div -->
-		<div class="tab-container" align="center" id="G31" style="display: none;">
+		<div class="tab-container" align="center" id="G31" style="display: nonee;">
         <!-- Panel Element: F&A Rates -->
         	<!-- Element Header: F&A Rates -->
                 <div class="h2-container">
@@ -668,10 +705,7 @@
                         </td>
                         <td nowrap class="infoline">
                         	<div align="center">
-                        	<span style="border:none;">
-                        	<textarea name="za" style="width:100%; text-align:left;" rows="4"></textarea>
-                        	</span>
-                        	<input name="textfield" type="text" size="6" id="protocol">
+                        	  <input name="textfield" type="text" size="6" id="protocol">
                         	</div>
                         </td>
                         <td nowrap class="infoline">
@@ -741,7 +775,7 @@
                                                     </select>
                       </div></td>
                         <td><div align="center">
-                          <input name="textfield" type="text" id="protocol" value="2008" size="6">
+                          <input name="textfield" type="text" id="protocol" value="2009" size="6">
                       </div></td>
                         <td><div align="center">
                           <input name="date1" type="text" id="aaplication date" value="12/14/2008" size="10">
@@ -756,8 +790,8 @@
                           </select>
                       </div></td>
                         <td><div align="center">
-                        	<input name="date3" type="text" size="12" id="expiration date">
-                        	</div></td>
+                        	<input name="date3" type="text" id="expiration date" value="364245" size="12">
+                   	  </div></td>
                         <td>
                         	<div align="center">
                         	<input name="date3" type="text" size="12" id="expiration date">
@@ -786,7 +820,7 @@
                                                                               </select>
                    	  </div></td>
                         <td><div align="center">
-                          <input name="textfield" type="text" id="protocol" value="2008" size="6">
+                          <input name="textfield" type="text" id="protocol" value="2009" size="6">
                       </div></td>
                         <td><div align="center">
                           <input name="date1" type="text" id="aaplication date" value="12/14/2008" size="10">
@@ -801,8 +835,8 @@
                                                     </select>
                       </div></td>
                         <td><div align="center">
-                    		<input name="date3" type="text" size="12" id="expiration date">
-                    		</div></td>
+                    		<input name="date3" type="text" id="expiration date" value="456789" size="12">
+               		  </div></td>
                         <td>
                         	<div align="center">
                     		<input name="date3" type="text" size="12" id="expiration date">
