https://test.kuali.org/jira/browse/KRAFUNC-228
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6660 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/abud-distincome.html
+++ b/kra-awa-dev/abud-distincome.html
@@ -272,13 +272,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <th   width="120px" > <div align="right"></div></th>
               </tr>
               <tr>
-                <th scope="row"> <div align="right"> Previous Budget: 07/05/2008 - 03/01/2009:</div></th>
+                <th height="21" scope="row"> <div align="right"> Previous Budget: 07/05/2008 - 03/01/2009:</div></th>
                 <td><div align="right">$650.00 </div></td>
                 <th ><div align="right"></div></th>
               </tr>
               <tr>
                 <th scope="col"> <div align="right"> Total:</div></th>
-                <td><div align="right"> $2,100.00 </div></td>
+                <td><div align="right"> $1,300.00 </div></td>
                 <th><div align="right"></div></th>
               </tr>
             </table>
