https://test.kuali.org/jira/browse/KRAFUNC-223
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6663 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-actions.html
+++ b/kra-awa-dev/aw-actions.html
@@ -789,15 +789,14 @@
                                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                   <input type="radio" name="RadioGroup1" value="radio" id="child" class="nobord">
                                   child <br><div id="cs" style="display:none;" align="">
-                                    <label>
-                                      <select name="select" id="select">
+                                    <select name="select" id="select" style="width:80%">
                                           <option selected>select child:</option>
                                           <option>000121-003: 400760: Smith: Physics</option>
                                           <option>- 000121-004: 426320: Jones: Center for Monkey Fez Research</option>
                                           <option>- 000121-005: 426320: Wilder: Pediatrics</option>
                                           <option>- 000121-006: 426320: Schuart: Cancer Prevention</option>
                                         </select>
-                                    </label>
+                                        <img src="../images/searchicon.gif" width="16" height="16" alt="lookup">
                                 </div></td>
                               </tr>
                           
@@ -823,15 +822,14 @@
                                   copy from parent       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                   <input type="radio" name="RadioGroup1" value="radio" id="child1" class="nobord">
                                   selected award<div id="cs1" style="display:none;" align="">
-                                    <label>
-                                      <select name="select" id="select">
+                                    <select name="select" id="select" style="width:80%">
                                           <option selected>select child:</option>
                                           <option>000121-003: 400760: Smith: Physics</option>
                                           <option>- 000121-004: 426320: Jones: Center for Monkey Fez Research</option>
                                           <option>- 000121-005: 426320: Wilder: Pediatrics</option>
                                           <option>- 000121-006: 426320: Schuart: Cancer Prevention</option>
                                         </select>
-                                    </label>
+                                        <img src="../images/searchicon.gif" width="16" height="16" alt="lookup">
                                 </div></td>
                               </tr>
                             
