--- a/kra-irb-dev/irb-protocolactions.html
+++ b/kra-irb-dev/irb-protocolactions.html
@@ -3888,16 +3888,18 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <div class="tab-container" align=center id="G03" style="display: none;">
             <!-- Sumary -->
             <div class="h2-container"><span class="subhead-left">
-              <h2><a href="#" id="A201" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F201"></a> Summary (Sequence 11/11: Notified Committee 11/14/2008)</h2>
+              <h2><a href="#" id="A201" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 align=absmiddle id="F201"></a> Summary</h2>
               </span><span class="subhead-right"><span class="subhead"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></span></div>
             <div id="G201" style="display: none;">
               <!-- sequence navigation -->
               <div style="clear: both"></div>
               <table cellpadding="0" cellspacing="0">
                 <tr>
-                  <td class="infoline" style="text-align:right; font-weight:bold;">Sequence Navigation:</td>
-                  <td class="infoline"><input src="../images/tinybutton-previous3.gif" onclick="javascript: alert('This would decrement the sequence being displayed by one.  Note that it would also, therefore, decrement the Compare to Previous Sequence by one.'); return false" class="tinybutton" alt="sync" title="Sync" type="image" />
-                    <input src="../images/tinybutton-next3.gif" onclick="javascript: alert('This would increment the sequence being displayed by one.  Note that it would also, therefore, increment the Compare to Previous Sequence by one.  This button would not be displayed if this were the moste recent sequence.'); return false" class="tinybutton" alt="sync" title="Sync" type="image" /></td>
+                  <td class="infoline" style="text-align:center; font-weight:bold;">
+                  	Sequence 11/11: Notified Committee 11/14/2008
+                  	<input src="../images/tinybutton-previous3.gif" onclick="javascript: alert('This would decrement the sequence being displayed by one.  Note that it would also, therefore, decrement the Compare to Previous Sequence by one.'); return false" class="tinybutton" alt="sync" title="Sync" type="image" style="vertical-align:middle;" />
+                    <input src="../images/tinybutton-next3.gif" onclick="javascript: alert('This would increment the sequence being displayed by one.  Note that it would also, therefore, increment the Compare to Previous Sequence by one.  This button would not be displayed if this were the moste recent sequence.'); return false" class="tinybutton" alt="sync" title="Sync" type="image" style="vertical-align:middle;" />
+                  </td>
                 </tr>
               </table>
               <!-- current sequence -->
@@ -3999,12 +4001,20 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         );	
                                 });
                             </script>
-                    Compare to Previous Sequence (Sequence 10/11: Did Something Extraordinary 10/23/2008) </td>
+                    Compare to Previous Sequence</td>
                 </tr>
               </table>
-              <!-- current sequence -->
-              <div id="Dsequence01" class="sequence compare">
+              <!-- previous sequence -->
+              <div id="Dsequence01" class="sequence">
+              <table cellpadding="0" cellspacing="0">
+                <tr>
+                  <td class="infoline" style="text-align:center; font-weight:bold;">
+                  	<span style="color:#000;">Sequence 10/11: Did Something Extraordinary 10/23/2008</span>
+                  </td>
+                </tr>
+              </table>
                 <!-- summary -->
+                <div class="compare">
                 <table cellpadding="0" cellspacing="0">
                   <tr>
                     <th style="text-align:right; width:135px;">Protocol Number:</th>
@@ -4077,6 +4087,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <td>21.: TECHNOLOGY EDUCATION INDUSTRIAL ARTS</td>
                   </tr>
                 </table>
+                </div>
               </div>
             </div>
             <!-- Submission Details -->
