[BFN] https://test.kuali.org/jira/browse/KRAFUNC-217 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6665 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-protocolactions.html
+++ b/kra-irb-dev/irb-protocolactions.html
@@ -3909,8 +3909,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <tr>
                     <th style="text-align:right; width:135px;">Protocol Number:</th>
                     <td>0809000039</td>
-                    <th style="text-align:right">Application Date:</th>
-                    <td>09/16/2002</td>
+                    <th style="text-align:right; width:140px;">Application Date:</th>
+                    <td style="width:275px;">09/16/2002</td>
                   </tr>
                   <tr>
                     <th style="text-align:right">Approval Date:</th>
@@ -3919,10 +3919,19 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <td>09/22/2009</td>
                   </tr>
                   <tr>
-                    <th style="text-align:right">Status:</th>
-                    <td class="changed">Closed</td>
+                    <th style="text-align:right">Last Approval Date:</th>
+                    <td>09/23/2007</td>
                     <th style="text-align:right">&nbsp; Type:</th>
                     <td>Standard</td>
+                  </tr>
+                  <tr>
+                    <th style="text-align:right">PI:</th>
+                    <td class="changed">
+                    	Adrian Monk
+                        <input src="../images/searchicon.gif" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" />
+                    </td>
+                    <th style="text-align:right">Status:</th>
+                    <td class="changed">Closed</td>
                   </tr>
                   <tr>
                     <th style="text-align:right; height:50px;">Title:</th>
@@ -3970,6 +3979,49 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <td class="changed">26.: TECHNOLOGY EDUCATION ARCHITECTURE</td>
                   </tr>
                 </table>
+                <!-- Attachments -->
+                <table cellpadding=0 cellspacing=0 summary="">
+                  <tr>
+                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="2">Attachments:</td>
+                  </tr>
+                  <tr>
+                    <th style="width:50px;">1</th>
+                    <td><a href="#" onclick="javascript: alert('This would open the attachment.'); return false"><span class="sequencea">My Serious Document.doc</span></a></td>
+                  </tr>
+                  <tr>
+                    <th style="width:50px;">2</th>
+                    <td><a href="#" onclick="javascript: alert('This would open the attachment.'); return false"><span class="sequencea">My Silly Funding Plan.xls</span></a></td>
+                  </tr>
+                </table>
+                <!-- Funding Source -->
+                <table cellpadding=0 cellspacing=0 summary="">
+                  <tr>
+                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="2">Funding Source:</td>
+                  </tr>
+                  <tr>
+                    <th style="width:50px;">1</th>
+                    <td>Ipsum Lorum Dolar</td>
+                  </tr>
+                </table>
+                <!-- Organization -->
+                <table cellpadding=0 cellspacing=0 summary="">
+                  <tr>
+                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="2">Organization:</td>
+                  </tr>
+                  <tr>
+                    <th style="width:50px;">1</th>
+                    <td>Resource Forge, L.L.C.</td>
+                  </tr>
+                </table>
+                <!-- Special Reviews -->
+                <table cellpadding=0 cellspacing=0 summary="">
+                  <tr>
+                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="2">Special Reviews:</td>
+                  </tr>
+                  <tr>
+                    <td><i>There have been no special reviews.</i></td>
+                  </tr>
+                </table>
               </div>
               <!--  Sequence Controls -->
               <table cellpadding=0 cellspacing=0 summary="">
@@ -3986,6 +4038,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                                 $("#Dsequence01").slideDown(600);
                                                 $("#Csequence01").attr("src","../images/tinybutton-hide.gif");
 												$(".sequence").addClass("compare");
+												$(".sequencea").addClass("comparea");
 												$(".sequencetd").css("color","#666666");
 												$(".changed").css({'color' : '#FF0000', 'font-weight' : 'bold'});
                                             },
@@ -3994,6 +4047,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                                 $("#Dsequence01").slideUp(300);
                                                 $("#Csequence01").attr("src","../images/tinybutton-show.gif");
 												$(".sequence").removeClass("compare");
+												$(".sequencea").removeClass("comparea");
 												$(".sequencetd").css("color","#333333");
 												$(".changed").css({'color' : '#000000', 'font-weight' : 'normal'});
 
@@ -4019,8 +4073,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <tr>
                     <th style="text-align:right; width:135px;">Protocol Number:</th>
                     <td>0809000039</td>
-                    <th style="text-align:right">Application Date:</th>
-                    <td>09/16/2002</td>
+                    <th style="text-align:right; width:140px;">Application Date:</th>
+                    <td style="width:275px;">09/16/2002</td>
                     <!--<th rowspan="5">
                                     <a href="#"><img src="../images/tinybutton-previous3.gif" alt="close" width=70 height=15 border=0 style="padding:2px;" /></a><br />
                                     <a href="#"><img src="../images/tinybutton-next3.gif" alt="close" width=70 height=15 border=0 style="padding:2px;" /></a>
@@ -4033,10 +4087,19 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <td>09/22/2009</td>
                   </tr>
                   <tr>
-                    <th style="text-align:right">Status:</th>
-                    <td class="changed">Active - Open to Enrollment</td>
+                    <th style="text-align:right">Last Approval Date:</th>
+                    <td>09/23/2007</td>
                     <th style="text-align:right">&nbsp; Type:</th>
                     <td>Standard</td>
+                  </tr>
+                  <tr>
+                    <th style="text-align:right">PI:</th>
+                    <td class="changed">
+                    	Nancy Drew
+                        <input src="../images/searchicon.gif" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" />
+                    </td>
+                    <th style="text-align:right">Status:</th>
+                    <td class="changed">Active - Open to Enrollment</td>
                   </tr>
                   <tr>
                     <th style="text-align:right; height:50px;">Title:</th>
@@ -4085,6 +4148,49 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <tr>
                     <th style="width:50px;">1</th>
                     <td>21.: TECHNOLOGY EDUCATION INDUSTRIAL ARTS</td>
+                  </tr>
+                </table>
+                <!-- Attachments -->
+                <table cellpadding=0 cellspacing=0 summary="">
+                  <tr>
+                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="2">Attachments:</td>
+                  </tr>
+                  <tr>
+                    <th style="width:50px;">1</th>
+                    <td><a href="#" onclick="javascript: alert('This would open the attachment.'); return false"><span class="sequencea">My Serious Document.doc</span></a></td>
+                  </tr>
+                  <tr>
+                    <th style="width:50px;">2</th>
+                    <td><a href="#" onclick="javascript: alert('This would open the attachment.'); return false"><span class="sequencea">My Silly Funding Plan.xls</span></a></td>
+                  </tr>
+                </table>
+                <!-- Funding Source -->
+                <table cellpadding=0 cellspacing=0 summary="">
+                  <tr>
+                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="2">Funding Source:</td>
+                  </tr>
+                  <tr>
+                    <th style="width:50px;">1</th>
+                    <td>Ipsum Lorum Dolar</td>
+                  </tr>
+                </table>
+                <!-- Organization -->
+                <table cellpadding=0 cellspacing=0 summary="">
+                  <tr>
+                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="2">Organization:</td>
+                  </tr>
+                  <tr>
+                    <th style="width:50px;">1</th>
+                    <td>Resource Forge, L.L.C.</td>
+                  </tr>
+                </table>
+                <!-- Special Reviews -->
+                <table cellpadding=0 cellspacing=0 summary="">
+                  <tr>
+                    <td style="background-color:#C3C3C3; font-weight:bold;" colspan="2">Special Reviews:</td>
+                  </tr>
+                  <tr>
+                    <td><i>There have been no special reviews.</i></td>
                   </tr>
                 </table>
                 </div>
