[BFN] https://test.kuali.org/jira/browse/KRAFUNC-188 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6666 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -171,7 +171,7 @@ Page
 <input src="../images/searchicon.gif" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" />
 
 <!-- Direct Inquiry -->
-<input name="x" src="../images/book_open.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
+<input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
 
 <!-- Text Pop-up -->
 <textarea name="" style="width:300px" rows="4"></textarea>
