--- a/kra-irb-dev/irb-protocolactions.html
+++ b/kra-irb-dev/irb-protocolactions.html
@@ -3927,8 +3927,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <tr>
                     <th style="text-align:right">PI:</th>
                     <td class="changed">
-                    	Adrian Monk
-                        <input src="../images/searchicon.gif" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" />
+                    	Monk, Adrian
+                        <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                     </td>
                     <th style="text-align:right">Status:</th>
                     <td class="changed">Closed</td>
@@ -4095,8 +4095,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <tr>
                     <th style="text-align:right">PI:</th>
                     <td class="changed">
-                    	Nancy Drew
-                        <input src="../images/searchicon.gif" onclick="javascript: alert('This would open the search dialog.'); return false" align="top" alt="Search " title="Search " style="border:none;" type="image" />
+                    	Drew, Nancy
+                        <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                     </td>
                     <th style="text-align:right">Status:</th>
                     <td class="changed">Active - Open to Enrollment</td>
