[BFN] COI Questionnaire Presentation Mock updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6669 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire-presentation-coi.html
+++ b/BFN/questionnaire-presentation-coi.html
@@ -159,12 +159,16 @@
 								$("#QID009").slideDown(600);
 								$("#QID010").slideDown(600);
 								$("#QID011").slideDown(600);
+								$("#QID012").slideDown(600);
+								$("#QID013").slideDown(600);
 							}
 							else
 							{
 								$("#QID009").slideUp(600);
 								$("#QID010").slideUp(600);
 								$("#QID011").slideUp(600);
+								$("#QID012").slideUp(600);
+								$("#QID013").slideUp(600);
 							}
 						<!-- QID014 -->
 							if(document.questionnaireform.AID014[0].checked == true)
