[BFN] IP Intellectual Property Review editable and read-only view updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6671 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -178,24 +178,24 @@ Page
 <input name="x" src="../images/pencil_add.png" onclick="javascript: alert('pop-up here'); return false" class="tinybutton" alt="Expanded Text Area" type="image" />
 
 <!-- Text Pop-up: Full Width -->
-<table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
+<table style="border:none; background:none; width:100%;" cellpadding="0" cellspacing="0">
 	<tr>
-    	<td style="border:none;">
+    	<td style="border:none; background:none;">
 			<textarea name="z" style="width:100%; text-align:left;" rows="4"></textarea>
         </td>
-        <td style="border:none; width:20px; vertical-align:bottom;">
+        <td style="border:none; background:none; width:20px; vertical-align:bottom;">
 			<input name="x" src="../images/pencil_add.png" onclick="javascript: alert('This would open a larger editable text area for this field.'); return false" style="border:none;" alt="Expanded Text Area" type="image" />
 		</td>
     </tr>
 </table>
 
 <!-- Expanded Read Only text area -->
-<table style="border:none; width:100%;" cellpadding="0" cellspacing="0">
+<table style="border:none; background:none; width:100%;" cellpadding="0" cellspacing="0">
     <tr>
-        <td style="border:none;">
+        <td style="border:none; background:none;">
             x
         </td>
-        <td style="border:none; width:20px; vertical-align:bottom;">
+        <td style="border:none; background:none; width:20px; vertical-align:bottom;">
             <input name="x" src="../images/openreadonly_greenarrow01.png" onclick="javascript: alert('If this were not a mock, this icon would open a read only view of the full text.'); return false" style="border:none;" alt="Expanded Read Only Text Area" type="image" />
         </td>
     </tr>
