https://uisapp2.iu.edu/jira-prd/browse/MOBILE-6
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6674 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-com-dev/irb-meeting.html
+++ b/kra-com-dev/irb-meeting.html
@@ -54,7 +54,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   <div id="tabs">
     <dl class="tabul">
      	<dt class="licurrent" ><span class="tabright tabcurrent">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-schedule.html');return document.MM_returnValue" value="University IRB #1 Meeting 8/04/2009">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-meeting.html');return document.MM_returnValue" value="University IRB #1 Meeting 8/04/2009">
+        </span></dt> <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-meeting-actions.html');return document.MM_returnValue" value="Meeting Actions">
         </span></dt>
     </dl>
   </div>
