--- a/kra-ip-dev/1-prop-contacts.html
+++ b/kra-ip-dev/1-prop-contacts.html
@@ -190,7 +190,7 @@ function addLoadEvent(func) {
       <td><div id="workarea">
           <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-              <td class="tabtable1-left"><img src="../images/tab-topleft.gif" alt="blank" width="12" height="29" align="absmiddle"> Project Personnel (3) </td>
+              <td class="tabtable1-left"><img src="../images/tab-topleft.gif" alt="blank" width="12" height="29" align="absmiddle"> Project Personnel and Credit Split (3) </td>
               <td class="tabtable1-mid"><span class="tabtable2-mid"><a id="A01" onClick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F01" ></a></span></td>
               <td class="tabtable1-right"><img src="../images/tab-topright.gif" alt="blank" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -676,11 +676,8 @@ function addLoadEvent(func) {
                 <th scope="row"><div align="center">1</div></th>
                 <td>Godfrey, Alberta D </td>
                 <td><div align="center">
-                    <select name="select" id="select">
-                      <option selected>Administrative</option>
-                      <option>Financial</option>
-                    </select>
-                  </div></td>
+                    Administrative
+                </div></td>
                 <td><div align="center"> Pediatrics </div></td>
                 <td><div align="center"> 123-456-7890 </div></td>
                 <td><div align="center"> agodfrey@universe.edu </div></td>
@@ -689,11 +686,8 @@ function addLoadEvent(func) {
                 <th  scope="row"><div align="center">2</div></th>
                 <td>McAfee, Alan E </td>
                 <td><div align="center">
-                    <select name="select2" id="select2">
-                      <option>Administrative</option>
-                      <option selected>Financial</option>
-                    </select>
-                  </div></td>
+                    Financial
+                </div></td>
                 <td><div align="center"> Pediatrics </div></td>
                 <td><div align="center">123-456-7890 </div></td>
                 <td><div align="center">mcaffee@universe.edu </div></td>
@@ -702,11 +696,8 @@ function addLoadEvent(func) {
                 <th scope="row"><div align="center">3</div></th>
                 <td>Coltrane, John </td>
                 <td><div align="center">
-                    <select name="select5" id="select5">
-                      <option selected>Administrative</option>
-                      <option>Financial</option>
-                    </select>
-                  </div></td>
+                    Administrative
+                </div></td>
                 <td><div align="center"> Pediatrics </div></td>
                 <td><div align="center">123-456-7890 </div></td>
                 <td><div align="center">jcoltrane@universe.edu </div></td>
