--- a/kra-ip-dev/1-prop-proposal.html
+++ b/kra-ip-dev/1-prop-proposal.html
@@ -229,7 +229,7 @@ function addLoadEvent(func) {
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width=12 height=29 align=absmiddle></td>
             </tr>
           </table>
-          <div class="tab-container" align=center id="G5" style="display: none;">
+          <div class="tab-container" align=center id="G5" style="display: nonee;">
             <div class="h2-container"><span class="subhead-left">
               <h2>Institutional Proposal </h2>
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
@@ -239,6 +239,10 @@ function addLoadEvent(func) {
                 <td>12351253</td>
                 <th><div align=right >Sequence Number:</div></th>
                 <td align=left valign=middle>000236</td>
+              </tr>
+              <tr>
+                <th><div align="right">Fiscal Month/Year:</div></th>
+                <td colspan="3">12/2009</td>
               </tr>
               <tr>
                 <th><div align=right>Award ID:</div></th>
