git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6679 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-ip-dev/1-prop-proposal.html
+++ b/kra-ip-dev/1-prop-proposal.html
@@ -229,7 +229,7 @@ function addLoadEvent(func) {
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width=12 height=29 align=absmiddle></td>
             </tr>
           </table>
-          <div class="tab-container" align=center id="G5" style="display: nonee;">
+          <div class="tab-container" align=center id="G5" style="display: none;">
             <div class="h2-container"><span class="subhead-left">
               <h2>Institutional Proposal </h2>
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
